# literate-happiness

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.cursor/rules/: terminal-rule.mdc
src/app/agents/job_search_agent/: agent.py
src/app/agents/job_search_agent/prompts/: __init__.py  instructions.py
src/app/agents/job_search_agent/schemas/: __init__.py
src/app/agents/job_search_agent/tools/: __init__.py  adzuna_tools.py
src/app/agents/linkedin_search_agent/: agent.py
src/app/agents/linkedin_search_agent/.adk/: session.db
src/app/agents/linkedin_search_agent/schemas/: __init__.py  tool_inputs.py
src/app/agents/linkedin_search_agent/tools/: __init__.py  adzuna_tools.py  mcp_servers.py
src/app/containers/: __init__.py  app_container.py
src/app/core/: __init__.py  config.py  logger.py
src/app/metadata/plans/: 01_JOB_SEARCH_AGENT_ARCHITECTURE.md
src/app/schemas/: __init__.py  adzuna.py
src/app/services/: __init__.py
src/app/services/adzuna/: __init__.py  exceptions.py  service.py
